--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <script src="https://embed.github.com/view/geojson/rbruder/WM_Parking/master/WM_TRIP2013.geojson"></script>
   </head>
   <body>
     <div class="wrapper">
